GNOME Bugzilla – Bug 601383
gtk_icon_view_get_selected_items: example code gives compiler warnings + fix
Last modified: 2009-12-08 04:49:12 UTC
The entry for gtk_icon_view_get_selected_items states that: "To free the return value, use: g_list_foreach (list, gtk_tree_path_free, NULL); g_list_free (list);" This will give compiler warnings due to the gtk_tree_path_free. Fix is trivial of course: g_list_foreach (list, (GFunc)gtk_tree_path_free, NULL); g_list_free (list);
Created attachment 147659 [details] [review] fix the documentation of GtkIconEntry
Comment on attachment 147659 [details] [review] fix the documentation of GtkIconEntry Please commit.
Comment on attachment 147659 [details] [review] fix the documentation of GtkIconEntry commit ae057dcd12c0729c1920c7761f76638142a85ce6
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.