[doc] Fix the documentation of GtkIconEntry

Cast to (GFunc) in example code

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=601383